# trinityguard-sarc-bridge

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: basic_usage.py  multi_agent_safety.py  pre_deployment_demo.py
tests/: test_bridge.py  test_os_security.py  test_owasp_map.py  test_risk_registry.py  test_safety_hooks.py  test_unified_report.py
trinityguard_sarc_bridge/: __init__.py  bridge.py  os_security.py  owasp_map.py  pre_deployment.py  report.py  risk_registry.py  safety_hooks.py
