[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinityguard-sarc-bridge"
version = "0.1.0"
description = "OWASP × SARC: Bridge TrinityGuard pre-deployment safety testing with SARC runtime governance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Abishek Bangalore Muralikrishna" },
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
